--- a/index.html
+++ b/index.html
@@ -1,16 +1,136 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <title>vue-firebase-application</title>
+    <title>Remember Coffee</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <style>
+      .navbar {
+        background-color: transparent;
+        border-bottom: none;
+        padding: 2rem 1rem;
+      }
+      .navbar .navbar-nav .nav-link {
+        margin-right: 2rem;
+        font-weight: bold;
+      }
+      .navbar .navbar-nav .nav-link:hover {
+        color: #ddd;
+      }
+      .first-view::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-image: url(img/bg-coffee.png);
+        background-size: cover;
+        background-position: center;
+        filter: brightness(70%);
+        z-index: -1;
+      }
+
+        .first-view {
+        position: relative;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        color: #fff;
+        text-align: center;
+        overflow: hidden;
+        }
+
+        .first-view > * {
+        position: relative; 
+        z-index: 1;
+        }
+
+      .text-green {
+        color: #28a745; 
+      }
+      .welcome-text{
+        font-size: 40px;
+      }
+      .recommend-text{
+        font-size: 20px;
+      }
+      .img-size{
+        height: auto;
+        width: 20px;
+      }
+    </style>
   </head>
   <body>
-      
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">Remember Coffee</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-link" href="#">What Coffee</a>
+                <a class="nav-link" href="#">Where Cafe</a>
+                <a class="nav-link" href="#">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="first-view">
+        <div class="py-4">
+            <div class="container">
+                <div class="welcome-text text-green">コーヒーの旅へようこそ！</div>
+            </div>
+        </div>
+
+        <div class="py-4">
+            <div class="container">
+               <div class="recommend-text text-green">都内でおすすめのカフェをご紹介いたします。</div>
+            </div>
+        </div>
+
+        <div class="py-4">
+            <div class="container">
+                <a href="#" class="btn btn-primary btn-lg">おすすめを探す</a>
+            </div>
+        </div>
+    </main>
+
+    <div class="py-4">
+        <div class="container">
+            <div class="d-flex justify-content-end">
+                <div class="flex-column">
+                    <div class="py-2">
+                        <a href="https://www.instagram.com/tomam_design/" target="_blank" rel="noopener noreferrer">
+                            <img class="img-size" src="img/instagram.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="py-2">
+                        <a href="https://twitter.com/tomam_engineer" target="_blank" rel="noopener noreferrer">
+                            <img class="img-size" src="img/x-twitter.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="py-2">
+                        <a href="https://fori.io/25winterhorse" target="_blank" rel="noopener noreferrer">
+                            <img class="img-size" src="img/folio.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
   </body>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdS+d5EpRaD1S0kXtbPE6rjffzgVbOrxtQx1GSEeaFqE5rX5e5K5S5j" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+
 </html>
